--- a/index.html
+++ b/index.html
@@ -114,27 +114,27 @@
           <div class="col-lg-12">
             <p>
               <a href="telev.html" class="btn btn-sq-lg btn-primary">
-                <i class="fa fa-user fa-5x"></i><br/>
+                <i class="fa fa-television fa-5x"></i><br/>
                 &emsp;&emsp;Television&emsp;&emsp;<br>
                 &emsp;&emsp;&emsp;&emsp;
               </a>
               <a href="door.html" class="btn btn-sq-lg btn-success">
-                <i class="fa fa-user fa-5x"></i><br/>
+                <i class="fa fa-home fa-5x"></i><br/>
                 &emsp;&emsp;&emsp;&emsp;Door&emsp;&emsp;&emsp;&emsp;<br>
                 &emsp;&emsp;&emsp;&emsp;
               </a>
-              <a href="light.html" class="btn btn-sq-lg btn-info">
-                <i class="fa fa-user fa-5x"></i><br/>
+              <a href="light.html" class="btn btn-sq-lg btn-primary">
+                <i class="fa fa-lightbulb-o fa-5x"></i><br/>
                 &emsp;&emsp;&emsp;&emsp;Light&emsp;&emsp;&emsp;&emsp;<br>
                 &emsp;&emsp;&emsp;&emsp;
               </a>
-              <a href="ac.html" class="btn btn-sq-lg btn-warning">
-                <i class="fa fa-user fa-5x"></i><br/>
+              <a href="ac.html" class="btn btn-sq-lg btn-success">
+                <i class="fa fa-thermometer fa-5x"></i><br/>
                 &emsp;&emsp;&emsp;&emsp;AC&emsp;&emsp;&emsp;&emsp;<br>
                 &emsp;&emsp;&emsp;&emsp;
               </a>
-              <a href="fan.html" class="btn btn-sq-lg btn-danger">
-                <i class="fa fa-user fa-5x"></i><br/>
+              <a href="fan.html" class="btn btn-sq-lg btn-primary">
+                <i class="fa fa-snowflake-o fa-5x"></i><br/>
                 &emsp;&emsp;&emsp;&emsp;Fan&emsp;&emsp;&emsp;&emsp;<br>
                 &emsp;&emsp;&emsp;&emsp;
               </a>
